--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -14,7 +14,7 @@ jobs:
       uses: actions/checkout@v2
 
     - name: Build Docker image
-      run: docker build -t sajedul5/nginx-container:latest .
+      run: docker build --no-cache -t sajedul5/nginx-container:latest .
 
   deploy:
     runs-on: ubuntu-latest
