--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -14,7 +14,7 @@ jobs:
       uses: actions/checkout@v2
 
     - name: Build Docker image
-      run: docker build --no-cache -t sajedul5/nginx-container:latest .
+      run: docker build -t sajedul5/nginx-container:latest .
 
   deploy:
     runs-on: ubuntu-latest
@@ -23,4 +23,4 @@ jobs:
 
     steps:
     - name: Run Docker container
-      run: docker run -d -p 8080:80 sajedul5/nginx-container:latest
+      run: docker run -d -p 80:80 sajedul5/nginx-container:latest
