--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -23,4 +23,4 @@ jobs:
 
     steps:
     - name: Run Docker container
-      run: docker run -d -p 80:80 sajedul5/nginx-container:latest
+      run: docker run -d -p 80:80 --network host sajedul5/nginx-container:latest
